// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 1`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 2`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Pacific / 11:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 3`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Mountain / 10:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 4`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Central / 9:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 5`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 6`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:30 AM Mountain / 10:30 AM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 7`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 8`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Pacific / 3:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 9`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Mountain / 2:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 10`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Central / 1:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 11`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 12`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      12:30 PM Mountain / 2:30 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 13`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 14`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Pacific / 11:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 15`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Mountain / 10:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 16`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Central / 9:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 17`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 18`] = `
<DocumentFragment>
  <div
    data-css-1a5irm0=""
    data-testid="read-only-testid"
  >
    <strong>
      Hearing Time
    </strong>
    <pre>
      8:25 PM Mountain / 10:25 PM Eastern
    </pre>
  </div>
</DocumentFragment>
`;
